# mdbook-mermaid-animate

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: doc.yml  publish.yml
doc/: book.toml  mermaid-animate.js
doc/src/: SUMMARY.md  bar.md  flowchart.md  foo.md  git-animate.yml  git-linear-commit.md  git.md  install.md  mermaid-version.md  pie.md  test.md  timeline-animate.yml  timeline.md  usage.md  xy.md  yml.md
doc/theme/css/: custom.css
src/: handlebar_helpers.rs  lib.rs  mermaid-animate.js  mermaid_of_frame.rs  mod.rs  model.rs  process_diagram.rs  script.html
src/tests/: flowchart-1.html  flowchart-2.html  flowchart.html  test.rs
