[package]
name = "mdbook-mermaid-animate"
version = "0.0.3"
authors = ["Laurent Carrié <laurent.carrie@gmail.com>"]
description = "mdbook preprocessor to add mermaid animation support, before mdbook-mermaid preprocessor"
license = "MPL-2.0"
homepage = "https://github.com/laurentcarrie/mdbook-mermaid-animate"
repository = "https://github.com/laurentcarrie/mdbook-mermaid-animate"
edition = "2024"

[dependencies]
mdbook-preprocessor = "0.5.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
env_logger = "0.11.8"
log = "0.4.11"
clap = { version = "4.0.29", features = ["cargo"] }
serde_json = "1.0.57"
toml_edit = { version = "0.15.0", default-features = false }
anyhow = "1.0.100"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
handlebars = "6.3.2"
serde_yaml = "0.9.34"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.0"
pretty_assertions = "1.4.0"
tempfile = "3.3.0"



